hphp/hack/test/typecheck/references/refs_in_array/element_assign2.php.exp
File "element_assign2.php", line 5, characters 8-13:
Cannot take references to array elements. (Typing[4225])
